[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "marketplace_sdk"
version = "0.1.0"
description = "A Python SDK for interacting with the Marketplace platform."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.1"
]

[project.optional-dependencies]
test = ["pytest", "requests-mock"] 